lcs-desktop (0.2~10) Lcs; urgency=low
  [Jean-Luc Chretien]
    * Replace deprecated function mysql_db_query in index.php and core/a_propos.php 
    * Closing squirrelmail notification on click
    * Fix bug in window resize
    * remove image prohibited

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Mon, 20 Sep 2010 13:41:30 +0200

lcs-desktop (0.2~9) Lcs; urgency=low
  [Jean-Luc Chretien]
    * Fix path for CAS service in index.php
    * Modify postrm to uninstall module by  web interface   
    * Fix bug in Makefile
    * Add mail notify (Yannick Chistel contrib)  
    * Fix typo in load_user_prefs.php 

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 30 Sep 2010 13:59:43 +0200

lcs-desktop (0.2~7) Lcs; urgency=low

  * fix bug date 
   + display menu application
   + redirect the request to the mail-admin if the maintenace application is not approved
   + Corrections display notifications
   + Remove jquery.notification.js
   + Fix bug links in dock
   + cosmetics   

 --  <dlepaisant@ac-caen.fr>  Sat, 18 Sep 2010 13:24:11 +0200

lcs-desktop (0.2~6) Lcs; urgency=low
  [Jean-Luc Chretien]
    * Modify package structure
    * Create folder user Profile at initial intsall
    * Add folder Profile in skel user
    * Modify inc-menus_admin.php for new menu structure
  [Dominique Lepaisant]
    * Modify many path for new structure package
    * Multiples bufs fixes following the introduction of the new strcuture 
    * Do not display menus Applications and services if the visitor is not identified 
      + Support Request: redirect the request to the mail-admin if the maintenace application is not approved 
      + Corrections display notifications 
      + Remove jquery.notification.js 
      + cosmetics
 
 --  <dlepaisant@ac-caen.fr>  Sat, 18 Sep 2010 07:31:01 +0200

lcs-desktop (0.1) Lcs; urgency=low

  * Create initial package structure
  * Create folder user Profile at initial intsall  
